add_executable(delete_node_in_a_linked_list_unittest  delete_node_in_a_linked_list_unittest.cc)
target_link_libraries(delete_node_in_a_linked_list_unittest gtest gtest_main)

add_executable(merge_two_sorted_lists_unittest  merge_two_sorted_lists_unittest.cc)
target_link_libraries(merge_two_sorted_lists_unittest gtest gtest_main)
